# MinML

./: .gitignore  Dockerfile  FALCON_SETUP.md  LICENSE  PRODUCTION_ENHANCEMENTS.md  README.md  check-app.js  debug-ui.md  demo.bat  demo.js  demo_compression.py  docker-compose.yml  explore-minml.md  falcon_server.py  fix-electron.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements_simple.txt  start_falcon_server.bat  start_quantized_falcon.bat  status.js  test-api.js  test-compression.js  tsconfig.json  vite.renderer.config.ts  working_falcon_server.py
.github/workflows/: ci.yml
compression/: __init__.py  base.py  compression_pipeline.py  gpt_oss_integration.py  keyword_extractor.py  registry.py  shorthand_compressor.py  stop_word_remover.py
crates/minml_rs/: Cargo.toml
crates/minml_rs/src/: lib.rs
data/: prompts.txt
examples/: __init__.py  compress_and_query.py  evaluate_savings.py  openai_compare.py  test_gpt_oss_integration.py  test_level3_analysis.py
middleware/: __init__.py  auth.py  config.py  enhanced_endpoints.py  exceptions.py  main.py  metrics.py  models.py
minml/: __init__.py  rs_bridge.py
scripts/: __init__.py  benchmark.py
src/main/: compressor.ts  env.ts  hybridCompressor.ts  main.ts  metrics.ts  modelProvider.ts  preload.ts  proxy.ts
src/renderer/: App.tsx  index.html  index.tsx  styles.css
tests/: __init__.py  test_compression.py  test_middleware.py  test_tokenizer.py
tokenizer/: __init__.py  tokenizer_utils.py  trainer.py
